--- a/plugins/e4sm.de.metamodel.edit/plugin_de.properties
+++ b/plugins/e4sm.de.metamodel.edit/plugin_de.properties
@@ -18,10 +18,10 @@ _UI_Connector_type = Connector
 _UI_PhysicalConnector_type = Physical Connector
 _UI_SoftwareComponent_type = Software Component
 _UI_LogicalConnector_type = Logical Connector
-_UI_Heuristic_type = Heuristic
-_UI_Function_type = Function
+_UI_Heuristic_type = Heuristik
+_UI_Function_type = Funktion
 _UI_ExternalDependency_type = External Dependency
-_UI_Unknown_type = Object
+_UI_Unknown_type = Objekt
 
 _UI_Unknown_datatype= Value
 
@@ -35,24 +35,24 @@ _UI_SoftwareComponent_OutputUncertanty_feature = Output Uncertainty
 _UI_Unknown_feature = Unspecified
 
 _UI_Package_type = Package
-_UI_Model_type = Model
+_UI_Model_type = Modell
 _UI_NamedElement_type = Named Element
 _UI_Actor_type = Actor
-_UI_Human_type = Human
-_UI_Robot_type = Robot
+_UI_Human_type = Mensch
+_UI_Robot_type = Roboter
 _UI_Package_components_feature = Components
 _UI_Package_softwareComponents_feature = Software Components
 _UI_Model_packages_feature = Packages
 _UI_NamedElement_name_feature = Name
 _UI_NamedElement_uuid_feature = UUID
 _UI_Package_connectors_feature = Connectors
-_UI_Sector_type = Sector
-_UI_Package_sectors_feature = Sectors
+_UI_Sector_type = Sektor
+_UI_Package_sectors_feature = Sektoren
 _UI_Sector_components_feature = Components
 _UI_Sensor_type = Sensor
 _UI_Actuator_type = Actuator
 _UI_PhysicalComponent_type = Physical Component
-_UI_Element_type = Element
+_UI_Element_type = Elemente
 _UI_Element_uuid_feature = UUID
 _UI_Model_actors_feature = Actors
 _UI_Pin_type = Pin
@@ -61,16 +61,16 @@ _UI_OutputPin_type = Output Pin
 _UI_Component_pins_feature = Pins
 _UI_Package_physicalComponents_feature = Physical Components
 _UI_Person_type = Person
-_UI_Component_mainResponsible_feature = Main Responsible
-_UI_Package_mainResponsible_feature = Main Responsible
-_UI_Person_surname_feature = Surname
-_UI_Person_department_feature = Department
+_UI_Component_mainResponsible_feature = Hauptverantwortlicher
+_UI_Package_mainResponsible_feature = Hauptverantwortlicher
+_UI_Person_surname_feature = Nachname
+_UI_Person_department_feature = Abteilung
 _UI_Person_responsibleForComponents_feature = Responsible For Components
 _UI_Model_personsPicturesPath_feature = Persons Pictures Path
 _UI_Person_pictureFileName_feature = Picture File Name
 _UI_OptionallyNamedElement_type = Optionally Named Element
 _UI_OptionallyNamedElement_name_feature = Name
 _UI_SoftwareComponent_outputUncertainty_feature = Output Uncertainty
-_UI_SoftwareComponent_synchronous_feature = Synchronous
+_UI_SoftwareComponent_synchronous_feature = Synchron
 _UI_SoftwareComponent_synchronous_feature_help = If checked, the component will execute and then provide some results.\nIf unchecked, the execution of the system continues while this component executes.
-_UI_EMF_Editor_Category_Execution = Execution
+_UI_EMF_Editor_Category_Execution = Ausführung
